[package]
name = "order_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 [lib] 
name ='lib'
path="lib/mod.rs"
[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
console-subscriber = "0.2.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version="1.37.0", features = ["full"]}
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
